Fix repeating bg breaking on smaller screens

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -3,12 +3,17 @@
 
 .bg::after {
   content: '';
-  height: 200%;
-  width: 200%;
+  height: 400%;
+  width: 150%;
   background-image: url('/images/background-pattern-black.png');
   background-repeat: repeat;
   background-size: 128px 128px;
-  transform: rotate(-30deg) translateY(-50%);
+
+  /* Center it and then rotate about the center*/
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(-30deg);
+
   opacity: 50%;
   position: absolute;
 }
